# Silpa-Flask

./: .coveragerc  .gitignore  .gitmodules  .testr.conf  .travis.yml  AUTHORS  Makefile  README  README.md  constants.py  dispatch.fcgi  dispatch.wsgi  fonts.yaml  loadconfig.py  modules.txt  requirements-modules.txt  requirements.txt  setup.cfg  silpa.cgi  silpa.conf  silpa.fcgi  silpa.py  silpa.wsgi  test-requirements.txt  tox.ini  webbridge.py  wsgi.py
copyninja_Silpa-Flask/: forks  repo  watchers
copyninja_Silpa-Flask/issue/: 4  7
copyninja_Silpa-Flask/milestone/: 1  2
core/: __init__.py  jsonrpchandler.py  modulehelper.py
docs/: Makefile  apis.rst  conf.py  credits.rst  faq.rst  hacking.rst  index.rst  installation.rst  listofmodules.rst  make.bat  modules.rst  silpa-flask.rst
etc/: silpa.conf
jishnu7_Silpa-Flask/: repo  watchers
santhoshtr_Silpa-Flask/: repo
silpa/: __init__.py  factory.py  helper.py  loadconfig.py  modulehelper.py  moduleloader.py  settings.py  silpa.conf
silpa/api/: __init__.py  jsonrpc.py
silpa/frontend/: __init__.py  assets.py  fonts.yaml  pages.py  text.yaml
silpa/rest/: __init__.py  api.py
silpa/tests/: __init__.py  settings.py  test_config.py  test_logconfig.py  utils.py
templates/: approxsearch.html  chardetails.html  contact.html  credits.html  default.html  hyphenation.html  hyphenator.html  index.html  inexactsearch.html  license.html  payyans.html  silpa.html  silpa.old.html  soundex.html  spellchecker.html  transliterate.html  transliteration.html  webfonts.html
tests/: test_config.py  utils.py
(+30 files in other folders)
