[metadata]
name = silpa
summary = Indic language computing platform
description-file =
  README.md
author = SILPA Developers
author-email = silpa-discuss@nongnu.org
home-page = http://silpa.org.in
classifier =
  Environment :: Web Environment
  Framework :: Flask
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 3

[files]
packages =
  silpa

[build-sphinx]
all_files = 1
build_dir = docs/build
source-dir = docs